--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
 
 body {
     margin: 0;
+    padding-top: 20vh;
     min-height: 100vh;
     min-width: 100vw;
     background-color: #2d2d2d;
@@ -17,4 +18,10 @@ body {
 
 .header {
     font-size: 1rem;
+}
+
+.square {
+    border: 1px solid white;
+    width: 5rem;
+    height: 5rem;
 }
