--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 
 body {
     margin: 0;
-    padding-top: 20vh;
+    padding-top: 10vh;
     min-height: 100vh;
     min-width: 100vw;
     background-color: #2d2d2d;
@@ -17,7 +17,8 @@ body {
 }
 
 .header {
-    font-size: 1rem;
+    font-size: 2rem;
+    margin-bottom: 4rem;
 }
 
 .square {
